force-app/main/default/objects/Apttus_Config2__TaxCode__c/Apttus_Config2__TaxCode__c.object-meta.xml
<CustomObject>
    <description>Represents a tax code associated with a product or servce</description>
    <label>Tax Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>