force-app/main/default/objects/Apttus_Config2__TaxCode__c/fields/Apttus_Config2__Code__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Code__c</fullName>
    <description>The external tax code</description>
    <inlineHelpText>The external tax code</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>