force-app/main/default/objects/Apttus_Config2__TaxCode__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <description>Tax Rate</description>
    <inlineHelpText>Tax Rate</inlineHelpText>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>